Fix volume mount issue

--- a/docker/inspect.sh.example
+++ b/docker/inspect.sh.example
@@ -23,7 +23,7 @@ fi
 proxy='{proxy}'
 
 docker run  -it \
-			-v $(pwd)/puppet:/puppet \
+			-v $(pwd)/:/puppet \
 			-e ONEVIEW_URL='{url}' \
 			-e ONEVIEW_USER='{user}' \
 			-e ONEVIEW_PASSWORD='{password}' \
