Refactor of switch, logical enclosure and uplink_sets plus tests

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -21,4 +21,6 @@ MethodLength:
 Style/AccessorMethodName:
   Enabled: false
 Metrics/CyclomaticComplexity:
-  Max: 8
+  Max: 10
+Metrics/AbcSize:
+  Max: 20
