Fixes last resources with uri issues, fixes failing unit test, all green

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -24,6 +24,7 @@ Metrics/CyclomaticComplexity:
   Max: 10
   Exclude:
     - 'lib/puppet/type/common.rb'
+    - 'lib/puppet/provider/uri_parsing.rb'
 Metrics/AbcSize:
   Max: 20
 Style/GlobalVars:
