Adding CI with travis and small changes to documentation

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -18,6 +18,8 @@ LineLength:
   Max: 140
 MethodLength:
   Max: 40
+Metrics/BlockLength:
+  Enabled: false
 Style/AccessorMethodName:
   Enabled: false
 Metrics/CyclomaticComplexity:
