Fixed/changed several unit tests and configuration files. Lots of room for improvement yet, but a first step.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -22,6 +22,9 @@ Metrics/BlockLength:
   Enabled: false
 Style/AccessorMethodName:
   Enabled: false
+Metrics/PerceivedComplexity:
+  Exclude:
+    - 'lib/puppet/provider/uri_parsing.rb'
 Metrics/CyclomaticComplexity:
   Max: 10
   Exclude:
