--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,15 @@ rvm:
   - 2.2.5
   - 2.3.1
 
-before_install: gem update bundler
+before_install:
+  - gem update bundler
+  # This is for purposes of following the latest available resources on GitHub for oneview-sdk-ruby
+  - git clone https://github.com/HewlettPackard/oneview-sdk-ruby
+  - cd oneview-sdk-ruby
+  - gem build oneview-sdk.gemspec
+  - gem install ./oneview-sdk-3.1.0.gem
+  - cd ..
+  - rm -rf oneview-sdk-ruby
 
 script:
-- rspec spec/unit/ --tag unit
+  - rake test
