--- a/.travis.yml
+++ b/.travis.yml
@@ -5,13 +5,15 @@ rvm:
 
 before_install:
   - gem update bundler
-  # This is for purposes of following the latest available resources on GitHub for oneview-sdk-ruby
+  # TODO: This MUST be removed before release. Remove from here.
+  # This is for purposes of following the latest available resources on GitHub for oneview-sdk-ruby, while development is ongoing there.
   - git clone https://github.com/HewlettPackard/oneview-sdk-ruby
   - cd oneview-sdk-ruby
   - gem build oneview-sdk.gemspec
   - gem install ./oneview-sdk-3.1.0.gem
   - cd ..
   - rm -rf oneview-sdk-ruby
+  # TODO: Remove up to here.
 
 script:
   - rake test
