Added I3S_AUTH_FILE env var, required for the unit tests

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,9 @@ rvm:
   - 2.2.5
   - 2.3.1
 
+env:
+  - I3S_AUTH_FILE=examples/login_for_integration_i3s_tests.json
+
 before_install:
   - gem update bundler
   # TODO: This MUST be removed before release. Remove from here.
