--- a/.pdkignore
+++ b/.pdkignore
@@ -25,7 +25,18 @@
 .project
 .envrc
 /inventory.yaml
-.vscode
-/spec/default_facts.yml
-/hiera.yaml
-/data/
+/appveyor.yml
+/.fixtures.yml
+/Gemfile
+/.gitattributes
+/.gitignore
+/.gitlab-ci.yml
+/.pdkignore
+/Rakefile
+/rakelib/
+/.rspec
+/.rubocop.yml
+/.travis.yml
+/.yardopts
+/spec/
+/.vscode/
