fixes in .gitattributes

--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,9 @@
+# Convert all line endings to lf
+* text eol=lf
+
+# Prevent zip files from being normalized regardless of their content
+*.zip	-text
+
 *.rb eol=lf
 *.erb eol=lf
 *.pp eol=lf
