--- a/.github/workflows/rake_test.yml
+++ b/.github/workflows/rake_test.yml
@@ -7,6 +7,7 @@ jobs:
   rake_build:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         ruby:
         - 2.3.1
