--- a/.github/workflows/rake_test.yml
+++ b/.github/workflows/rake_test.yml
@@ -7,7 +7,6 @@ jobs:
   rake_build:
     runs-on: ubuntu-latest
     strategy:
-      fail-fast: false
       matrix:
         ruby:
         - 2.3.1
@@ -21,9 +20,6 @@ jobs:
       with:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true
-#
-#    - name: Install dependencies
-#      run: gem update bundler
 
     - name: Rake test
-      run: bundle exec rake test
+      run: bundle exec rake
