--- a/.github/workflows/rake_test.yml
+++ b/.github/workflows/rake_test.yml
@@ -23,3 +23,8 @@ jobs:
 
     - name: Rake test
       run: bundle exec rake
+
+    - name: Coveralls
+      uses: coverallsapp/github-action@master
+      with:
+        github-token: ${{ secrets.GITHUB_TOKEN }}
