add make coverage

--- a/.github/workflows/rake_test.yml
+++ b/.github/workflows/rake_test.yml
@@ -24,6 +24,11 @@ jobs:
     - name: Rake test
       run: bundle exec rake
 
+    - name: npm install, make test-coverage
+      run: |
+        npm install
+        make test-coverage
+
     - name: Coveralls
       uses: coverallsapp/github-action@master
       with:
