add make coverage1

--- a/.github/workflows/rake_test.yml
+++ b/.github/workflows/rake_test.yml
@@ -25,9 +25,7 @@ jobs:
       run: bundle exec rake
 
     - name: npm install, make test-coverage
-      run: |
-        npm install
-        make test-coverage
+      run: make test-coverage
 
     - name: Coveralls
       uses: coverallsapp/github-action@master
