--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -15,3 +15,10 @@ jobs:
         ruby-version: ${{ matrix.ruby }}
         bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - run: bundle exec rake
+
+    - uses: codecov/codecov-action@v1
+      with:
+        flags: unit-test
+        name: codecov-umbrella
+        fail_ci_if_error: true
+        verbose: true
