--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -9,7 +9,11 @@ jobs:
         ruby: [2.3,2.4,2.5]
     runs-on: ${{ matrix.os }}
     steps:
-    - uses: actions/checkout@v2
+    - name: git clone
+      uses: actions/checkout@v2
+      with:
+        fetch-depth: 2
+
     - uses: ruby/setup-ruby@v1
       with:
         ruby-version: ${{ matrix.ruby }}
