--- a/codecov.yml
+++ b/codecov.yml
@@ -1,8 +1,27 @@
 # Setting coverage targets per flag
+#coverage:
+#  status:
+#    project:
+#      default:
+#        target: 90% #overall project/ repo coverage
+
+codecov:
+  notify:
+    require_ci_to_pass: yes
+
 coverage:
+  precision: 2
+  round: down
+  range: "70...100"
+
   status:
     project:
       default:
-        target: 90% #overall project/ repo coverage
+        threshold: 1
+    # Disable patch since it is noisy and not correct
+    patch:
+      default:
+        enabled: no
+        if_not_found: success
 
 comment: false
