--- a/codecov.yml
+++ b/codecov.yml
@@ -1,10 +1,3 @@
-# Setting coverage targets per flag
-#coverage:
-#  status:
-#    project:
-#      default:
-#        target: 90% #overall project/ repo coverage
-
 codecov:
   notify:
     require_ci_to_pass: yes
@@ -18,6 +11,7 @@ coverage:
     project:
       default:
         threshold: 1
+        target: 90% #overall project/ repo coverage
     # Disable patch since it is noisy and not correct
     patch:
       default:
