--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -28,3 +28,8 @@ jobs:
       uses: codecov/codecov-action@v1
       with:
         files: ./coverage/.resultset.json
+
+    - name : print environment variables
+      run: env
+    - name : print github environment variables
+      run: echo $GITHUB_ENV
